--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Romano Firtermaiszter <firtermaiszter.romano@gmail.com>",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/Romesz/desktop-audio-player.git"
   },
   "main": "./app.js",
   "scripts": {
